<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elegantcode.trainertimer.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_timer"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="top|center_horizontal|center"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/text_00"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="120sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/text_colon"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="120sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:text="@string/text_00"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="120sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:id="@+id/layout_center_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TableRow
                android:id="@+id/table_row_30s"
                android:layout_width="match_parent"
                android:hapticFeedbackEnabled="false"
                android:isScrollContainer="false"
                android:keepScreenOn="false"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus10s"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_minus_10s"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_add10s"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:freezesText="false"
                    android:gravity="end|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_plus_10s"
                    android:textIsSelectable="false"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:id="@+id/table_row_1m"
                android:layout_width="0dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <Button
                    android:id="@+id/button_minus1m"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_minus_1m"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/button_add1m"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_plus_1m"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:id="@+id/table_row_5m"
                android:layout_width="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus5m"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_minus_5m"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_add5m"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_plus_5m"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:id="@+id/table_row_10m"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_minus10m"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_minus_10m"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_add10m"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:onClick="numberButtonClickHandler"
                    android:text="@string/button_plus_10m"
                    android:textSize="18sp"
                    />

            </TableRow>


            <TableRow
                android:id="@+id/table_row_start"
                android:orientation="horizontal">

                <LinearLayout
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_reset_0"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:gravity="start|center_vertical"
                        android:onClick="resetButtonClickHandler"
                        android:text="@string/button_reset"
                        android:textSize="24sp"
                        />

                    <Button
                        android:id="@+id/button_start"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="end|center_vertical"
                        android:text="@string/button_start"
                        android:textSize="24sp"
                         />

                </LinearLayout>

            </TableRow>

        </TableLayout>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
